--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
         <auth-method>FORM</auth-method>
         <realm-name>jdbcRealm</realm-name>
         <form-login-config>
-            <form-login-page>/page/app/templ/login.html</form-login-page>
+            <form-login-page>/login.html</form-login-page>
             <form-error-page>/error.html</form-error-page>
         </form-login-config>
     </login-config>
