--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,9 +23,9 @@
     </session-config>
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>jdbcRealm</realm-name>
+        <realm-name>MyCustomRealm</realm-name>
         <form-login-config>
-            <form-login-page>/loginNEW.html</form-login-page>
+            <form-login-page>/login.html</form-login-page>
             <form-error-page>/error.html</form-error-page>
         </form-login-config>
 
