--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,11 @@
     <artifactId>pasman</artifactId>
     <packaging>war</packaging>
     <version>0.1.0-SNAPSHOT</version>
-    <name>pasman</name>
-
     <build>
-        <finalName>pasman</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <inherited>true</inherited>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -24,8 +19,13 @@
             </plugin>
         </plugins>
     </build>
-
-
+    <name>pasman</name>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <!--slf4 vs logback-->
@@ -60,8 +60,8 @@
             <groupId>org.glassfish.security.realm</groupId>
             <artifactId>realm</artifactId>
             <version>0.1.0-SNAPSHOT</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/REALM.jar</systemPath>-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/realm-0.1.0-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 
